--- a/yelp/templates/business_match.html
+++ b/yelp/templates/business_match.html
@@ -12,13 +12,9 @@
         <h3>{{ business.name }}</h3>
         <p>{{ business.id }}</p>
         <p>{{ business.alias }}</p>
-        <p>{{ business.categories }}</p>
-        <p>{{ business.price }}</p>
-        <p>{{ business.rating }}</p>
-        <p>{{ business.display_phone }}</p>
-        <p>{{ business.url }}</p>
-        <p>{{ business.image_url }}</p>
         <p>{{ business.location }}</p>
+        <p>{{ business.coordinates }}</p>
+        <p>{{ business.phone }}</p>
       </div>
     </div>
     {% endfor %}
